<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Engineers Guide</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="components">Components</string>
    <string name="logout">logout</string>
    <string name="profile">profile</string>
    <string name="search">Search</string>
    <string name="groups">Groups</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="pdf">PDF</string>
    <string name="settings">settings</string>
    <string name="save">Save</string>
    <string name="textview">TextView</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="write_your_bio">write your bio …</string>
</resources>